--- a/views/admin/products.pug
+++ b/views/admin/products.pug
@@ -20,6 +20,7 @@ block content
                         .card__actions
                             a.btn(href="/admin/edit-product/" + product.id + "?edit=true") Edit
                             form.delete-product(action="/admin/delete-product", method="POST")
+                                input(type="hidden", value=product.id, name="productId")
                                 button.btn(type="submit") Delete
         else
             h1 No Products
