--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -74,6 +74,9 @@ main {
 .card__image {
     width: 100%;
     height: 62%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .card__image img {
@@ -82,6 +85,7 @@ main {
 
 .card__actions {
     padding: 1rem;
+    padding-bottom: 0;
     display: flex;
     align-items: center;
     justify-content: center;
