--- a/views/shop/cart.pug
+++ b/views/shop/cart.pug
@@ -2,16 +2,19 @@ extends ../layouts/main-layout.pug
 
 block styles
     link(rel="stylesheet", href="/styles/main.css")
+    link(rel="stylesheet", href="/styles/cart.css")
     
 block content
     main
         if prods.length > 0
-            ul
+            ul.cart-list
                 each product in prods
                     li
-                        p #{product.productData.title} (#{product.qty})
+                        p #{product.title} (#{product.cartItem.quantity})
                         form(action="/cart-delete-item", method="POST")
-                            input(type="hidden", value=product.productData.id, name="productId")
-                            button.btn(type="submit") Delete
+                            input(type="hidden", value=product.id, name="productId")
+                            button(type="submit", class="btn delete-btn") Delete
+            form.order-now(action="/create-order", method="POST")
+                button.btn(type="submit") Order Now
         else
             h1 No Products in Cart
