--- a/views/shop/orders.pug
+++ b/views/shop/orders.pug
@@ -2,7 +2,17 @@ extends ../layouts/main-layout.pug
 
 block styles
     link(rel="stylesheet", href="/styles/main.css")
+    link(rel="stylesheet", href="/styles/orders.css")
     
 block content
     main
-        h1 Nothing There
+        if orders.length > 0
+            ul.orders
+                each order in orders
+                    li 
+                        h1 ##{order.id}
+                        ul.orders-product
+                            each product in order.products
+                                li #{product.title} (#{product.orderItem.quantity})
+        else
+            h1 You got no orders
