--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -23,8 +23,10 @@ main {
 }
 
 .main-header__nav {
+    width: 100%;
     height: 100%;
     display: flex;
+    justify-content: space-between;
     align-items: center;
 }
 
