--- a/views/shop/product-list.pug
+++ b/views/shop/product-list.pug
@@ -19,8 +19,9 @@ block content
                             p.product__description #{product.description}
                         .card__actions
                             a.btn(href="/products/" + product._id) Details
-                            form(action="/cart" method="POST")
-                                button.btn(type="submit") Add To Cart
-                                input(type="hidden" name="productId" value=product._id)
+                            if isLogged
+                                form(action="/cart" method="POST")
+                                    button.btn(type="submit") Add To Cart
+                                    input(type="hidden" name="productId" value=product._id)
         else
             h1 No Products
