--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -75,7 +75,7 @@ main {
 
 .card__image {
     width: 100%;
-    height: 62%;
+    height: 400px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -89,7 +89,6 @@ main {
 
 .card__actions {
     padding: 1rem;
-    padding-bottom: 0;
     display: flex;
     align-items: center;
     justify-content: center;
