--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -31,4 +31,6 @@ html(lang="en")
                     else
                         li.main-header__item
                             a(href="/login", class=(path==="/login" ? "active": "")) Login
+                        li.main-header__item
+                            a(href="/signup", class=(path==="/signup" ? "active": "")) Sign Up
         block content
