--- a/public/styles/forms.css
+++ b/public/styles/forms.css
@@ -5,7 +5,10 @@
 }
 
 .form-control {
-    margin: 1rem 0;
+    width: 100%;
+    margin: 1.2rem 0;
+    position: relative;
+    overflow: hidden;
 }
 
 .form-control label,
@@ -21,8 +24,55 @@
 
 .form-control input,
 .form-control textarea {
-    border: 1px solid rgb(158, 224, 157);
-    border-radius: 2px;
-    padding: 0.5rem;
+    display: block;
+    border: 0;
+    border-bottom: 2px solid #f1c40f;
+    padding: 1rem;
     outline: 0;
+    font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+}
+
+.form-control-input-line {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #e67e22;
+    z-index: 1;
+    margin-left: -100%;
+    transition: margin-left .5s ease;
+}
+
+.form-control input:focus + .form-control-input-line {
+    margin-left: 0;
+}
+
+.form-control-btn {
+    width: 100%;
+    padding: 1rem 0;
+    margin: 1rem 0;
+    cursor: pointer;
+    font-family: 'Lato', sans-serif;
+    font-size: 1.2rem;
+    background-color: #f1c40f;
+    border: 0;
+    outline: 0;
+    transition: background-color .3s, box-shadow .3s;
+}
+
+.form-control-btn:hover {
+    background-color: #f39c12;
+    box-shadow: 0 0 20px #f39d1290;
+}
+
+.form-control-addition {
+    font-size: 0.75rem;
+}
+
+.create-account-anchor a {
+    text-decoration: none;
+    color: #f39c12;
 }
