--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
 * {
     padding: 0;
@@ -7,7 +7,8 @@
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
+    background-color: #fff9e0;
 }
 
 main {
@@ -17,8 +18,8 @@ main {
 
 .main-header {
     width: 100%;
-    height: 3.5rem;
-    background-color: rgb(158, 224, 157);
+    height: 4rem;
+    background-color: #f1c40f;
     padding: 0 1.5rem;
 }
 
@@ -43,12 +44,13 @@ main {
     text-decoration: none;
     color: #fff;
     transition: .3s;
+    font-size: 1.2rem;
 }
 
 .main-header__item a:hover,
 .main-header__item a:active,
 .main-header__item a.active{
-    color: rgb(173, 33, 162);
+    color: #8e44ad;
 }
 
 .grid {
@@ -100,10 +102,10 @@ main {
 }
 
 .btn {
-    border: 1px solid rgb(158, 224, 157);
+    border: 1px solid #f1c40f;
     background: #fff;
     border-radius: 3px;
-    color:rgb(158, 224, 157);
+    color:#f1c40f;
     cursor: pointer;
     font-size: 16px;
     padding: 0.8rem 1.3rem;
