Refactor push-notifications

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -4,14 +4,17 @@ block styles
     link(rel="stylesheet", href="/styles/main.css")
     link(rel="stylesheet", href="/styles/forms.css")
     link(rel="stylesheet", href="/styles/auth.css")
+    link(rel="stylesheet", href="/styles/notifications.css")
 
 block content
     main
+        .notifications
+            if errorMessage
+                div(class="notification-block notification-block--error")
+                    p #{errorMessage}
+                    .notifications-timeline
         form.login-form(action='/login', method="POST")
             h2 Welcome
-            if errorMessage
-                div(class="user-message user-message--error")
-                    p #{errorMessage}
             input(type="hidden", name="_csrf", value=csrfToken)
             .form-control
                 input(type="email", name="email", id="email", placeholder="Email", autocomplete="off")
@@ -24,3 +27,4 @@ block content
                 span Not registered?
                 span.create-account-anchor 
                     a(href="/signup") Create an account
+    script(src="/js/notifications.js")
