--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -4,14 +4,17 @@ block styles
     link(rel="stylesheet", href="/styles/main.css")
     link(rel="stylesheet", href="/styles/forms.css")
     link(rel="stylesheet", href="/styles/auth.css")
+    link(rel="stylesheet", href="/styles/notifications.css")
 
 block content
     main
+        .notifications
+            if errorMessage
+                div(class="notification-block notification-block--error")
+                    p #{errorMessage}
+                    .notifications-timeline
         form.login-form(action='/signup', method="POST")
             h2 Nice To Meet You
-            if errorMessage
-                div(class="user-message user-message--error")
-                    p #{errorMessage}
             input(type="hidden", name="_csrf", value=csrfToken)
             .form-control
                 input(type="email", name="email", id="email", placeholder="Email")
@@ -27,3 +30,4 @@ block content
                 span Already registered?
                 span.create-account-anchor 
                     a(href="/login") Log in account
+    script(src="/js/notifications.js")
