--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -47,9 +47,21 @@ main {
     font-size: 1.2rem;
 }
 
+.main-header__item button {
+    border: 0;
+    background-color: transparent;
+    text-decoration: none;
+    color: #fff;
+    transition: .3s;
+    font-size: 1.2rem;
+    cursor: pointer;
+    outline: 0;
+}
+
 .main-header__item a:hover,
 .main-header__item a:active,
-.main-header__item a.active{
+.main-header__item a.active,
+.main-header__item button:hover {
     color: #8e44ad;
 }
 
