--- a/public/styles/forms.css
+++ b/public/styles/forms.css
@@ -1,7 +1,15 @@
 .product-form {
-    width: 30rem;
+    width: 35rem;
     max-width: 90%;
+    padding: 25px 40px;
     margin: auto;
+    margin-top: 3rem;
+    box-shadow: 0 0 10px #00000023;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffffff;
 }
 
 .form-control {
