--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -1,5 +1,5 @@
 .cart-list {
-    width: 30rem;
+    width: 40rem;
     max-width: 90%;
     margin: 0 auto;
 }
@@ -10,13 +10,21 @@
     align-items: center;
     width: 100%;
     height: 70px;
-    border: 1px solid rgb(158, 224, 157);
     margin-bottom: 15px;
     border-radius: 10px;
+    box-shadow: 0 0 10px #00000023;
+    border: 2px solid #f1c40f;
+    background-color: #ffffff;
 }
 
 .cart-list p {
     margin-left: 30px;
+    font-size: 1.3rem;
+}
+
+.cart-list p span:first-child {
+    font-weight: 700;
+    color: #e67e22;
 }
 
 .cart-list form {
@@ -24,18 +32,17 @@
 }
 
 .order-now {
-    width: 30rem;
+    width: 40rem;
     margin: 0 auto;
 }
 
 .delete-btn {
-    border: 1px solid rgb(255, 105, 105);
-    color: rgb(255, 105, 105);
-    outline: 0;
-    padding: 0.4rem 1.2rem;
+    width: 100%;
+    padding: .7rem 2rem;
+    background-color: #e74c3c;
 }
 
 .delete-btn:hover {
-    color: #ffffff;
-    background-color: rgb(255, 105, 105);
+    background-color: #c0392b;
+    box-shadow: 0 0 10px #c03a2b59;
 }
