--- a/public/styles/orders.css
+++ b/public/styles/orders.css
@@ -8,7 +8,9 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    border: 1px solid rgb(158, 224, 157);
+    box-shadow: 0 0 10px #00000023;
+    border: 2px solid #f1c40f;
+    background-color: #ffffff;
     border-radius: 10px;
     padding: 1rem;
     margin-bottom: 20px;
@@ -16,4 +18,10 @@
 
 .orders-product li {
     list-style-type: none;
+    font-size: 1.5rem;
+}
+
+.orders-product li span:first-child {
+    font-weight: 700;
+    color: #e67e22;
 }
