--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -4,15 +4,9 @@ block styles
     link(rel="stylesheet", href="/styles/main.css")
     link(rel="stylesheet", href="/styles/forms.css")
     link(rel="stylesheet", href="/styles/auth.css")
-    link(rel="stylesheet", href="/styles/notifications.css")
 
 block content
     main
-        .notifications
-            if errorMessage
-                div(class="notification-block notification-block--error")
-                    p #{errorMessage}
-                    .notifications-timeline
         form.login-form(action='/login', method="POST")
             h2 Welcome
             input(type="hidden", name="_csrf", value=csrfToken)
@@ -27,4 +21,7 @@ block content
                 span Not registered?
                 span.create-account-anchor 
                     a(href="/signup") Create an account
-    script(src="/js/notifications.js")
+            p.form-control-addition 
+                span Forgot password?
+                span.create-account-anchor 
+                    a(href="/reset") Reset account password
