--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -5,8 +5,18 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Shop
         link(rel="stylesheet", href="/styles/main.css")
+        link(rel="stylesheet", href="/styles/notifications.css")
         block styles
     body
+        .notifications
+            if errorMessage
+                div(class="notification-block notification-block--error")
+                    p #{errorMessage}
+                    .notifications-timeline
+            if successMessage
+                div(class="notification-block notification-block--success")
+                    p #{successMessage}
+                    .notifications-timeline
         header.main-header
             nav.main-header__nav
                 ul.main-header__item-list
@@ -35,3 +45,4 @@ html(lang="en")
                         li.main-header__item
                             a(href="/signup", class=(path==="/signup" ? "active": "")) Sign Up
         block content
+        script(src="/js/notifications.js")
